CRUD, style table

--- a/02_CRUD/public/stylesheets/style.css
+++ b/02_CRUD/public/stylesheets/style.css
@@ -6,3 +6,16 @@ body {
 a {
   color: #00B7FF;
 }
+
+table thead tr{
+  background-color: #ccc;
+}
+
+table tbody tr:hover{
+  cursor: pointer;
+  background-color: #DDD;
+}
+
+table tfoot tr{
+  background-color: #ccc;
+}
