--- a/02_CRUD/views/customer.ejs
+++ b/02_CRUD/views/customer.ejs
@@ -5,24 +5,24 @@
     </head>
     <body>
         <h1><%= title %></h1>
-        <p>Customer Registration</p>
         <form action="/new" method="POST">
             <fieldset>
                 <legend>Data</legend>
                 <p>
-                    Name: <input type="text" name="name" />
+                    Name: <input type="text" name="name" value="<%= customer.name %>"/>
                 </p>
                 <p>
-                    Age: <input type="number" name="age" min="1" max="150" />
+                    Age: <input type="number" name="age" min="1" max="150" value="<%= customer.age %>"/>
                 </p>
                 <p>
-                    State: <select name="state">
+                    State: <select id="uf" name="state">
                                <option>Select state:</option>
                                <option>PR</option>
                                <option>SC</option>
                                <option>RS</option>
                            </select>
                 </p>
+                <input type="hidden" value="<%= customer._id %>" />
                 <p>
                     <input type="submit" value="Save" />
                     <a href="/">Cancelar</a>
@@ -35,6 +35,12 @@
                 const error = window.location.search.split('=')[1];
                 alert(decodeURI(error));
             }
+
+            // seta o estado
+            <% if(customer.state) { %>
+                document.getElementById("uf").value = "<%= customer.state %>"
+            <% } %>
+
         </script>
     </body>
 </html>
