CRUD, add DotEnv config

--- a/02_CRUD/views/customer.ejs
+++ b/02_CRUD/views/customer.ejs
@@ -22,7 +22,7 @@
                                <option>RS</option>
                            </select>
                 </p>
-                <input type="hidden" value="<%= customer._id %>" />
+                <input type="hidden" name="id" value="<%= customer._id %>" />
                 <p>
                     <input type="submit" value="Save" />
                     <a href="/">Cancelar</a>
