AuthPass - Login with error

--- a/05_AuthPassport/views/login.ejs
+++ b/05_AuthPassport/views/login.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><%= title %></h1>
-    <form action="/login">
+    <form action="/login" method="POST">
         <input name="username" type="text"><br />
         <input name="password" type="password"><br />
         <input type="submit" value="Login">
