--- a/05_AuthPassport/views/signup.ejs
+++ b/05_AuthPassport/views/signup.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><%= title %></h1>
-    <form action="/login" method="POST">
+    <form action="/users/signup" method="POST">
         <input name="username" type="text"><br />
         <input name="password" type="password"><br />
         <input name="email" type="text"><br />
