AuthPass - Add logout

--- a/05_AuthPassport/views/index.ejs
+++ b/05_AuthPassport/views/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+</head>
+<body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <form action="/logout" method="POST">
+        <input type="submit" value="Logout">
+    </form>
+</body>
 </html>
