--- a/05_AuthPassport/views/login.ejs
+++ b/05_AuthPassport/views/login.ejs
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
     <h1><%= title %></h1>
     <form action="/login" method="POST">
-        <input name="username" type="text"><br />
-        <input name="password" type="password"><br />
+        Username:<input name="username" type="text"><br />
+        Password:<input name="password" type="password"><br />
         <input type="submit" value="Login">
     </form>
     <!-- Error message -->
