--- a/05_AuthPassport/views/signup.ejs
+++ b/05_AuthPassport/views/signup.ejs
@@ -11,6 +11,10 @@
         Username:<input name="username" type="text"><br />
         Password:<input name="password" type="password"><br />
         E-mail:<input name="email" type="text"><br />
+        Profile:<select name="profile">
+                    <option value="0">User</option>
+                    <option value="1">Admin</option>
+                </select>
         <input type="submit" value="Save">
     </form>
     <!-- Error message -->
