AuthPass - Add permissions logic

--- a/05_AuthPassport/views/index.ejs
+++ b/05_AuthPassport/views/index.ejs
@@ -52,5 +52,10 @@
             <input type="submit" value="Logout">
         </form>
     </p>
+    <p>
+        <% if(profile === '1'){ %> 
+            <a href="/reports">Reports</a>
+        <% } %>
+    </p>
 </body>
 </html>
