--- a/05_AuthPassport/views/reports.ejs
+++ b/05_AuthPassport/views/reports.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
+<!-- Top -->
+<%- include("./partials/top.ejs") %>
+    <!-- body content -->
     <h1>Admin-only content!!!</h1>
-</body>
-</html>
+    <!-- botton -->
+<%- include("./partials/bottom.ejs") %>
