--- a/05_AuthPassport/views/error.ejs
+++ b/05_AuthPassport/views/error.ejs
@@ -1,3 +1,8 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!-- Top -->
+<%- include("./partials/top.ejs") %>
+    <!-- body content -->
+    <h1><%= message %></h1>
+    <h2><%= error.status %></h2>
+    <pre><%= error.stack %></pre>
+    <!-- botton -->
+<%- include("./partials/bottom.ejs") %>
