--- a/05_AuthPassport/views/login.ejs
+++ b/05_AuthPassport/views/login.ejs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-    <h1><%= title %></h1>
+<!-- Top -->
+<%- include("./partials/top.ejs") %>
+    <!-- body content -->
     <form action="/login" method="POST">
         Username:<input name="username" type="text"><br />
         Password:<input name="password" type="password"><br />
@@ -21,5 +15,5 @@
     <p>
         <a href="/users/forgot">Esqueceu a sua senha?</a> | <a href="/users/signup">Não possui cadastro?</a>
     </p>
-</body>
-</html>
+    <!-- botton -->
+<%- include("./partials/bottom.ejs") %>
