--- a/05_AuthPassport/views/partials/top.ejs
+++ b/05_AuthPassport/views/partials/top.ejs
@@ -2,8 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!-- recommended by bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= title %></title>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <h1><%= title %></h1>
+    <div class="container">
+        <h1><%= title %></h1>
