--- a/05_AuthPassport/views/login.ejs
+++ b/05_AuthPassport/views/login.ejs
@@ -1,19 +1,27 @@
 <!-- Top -->
 <%- include("./partials/top.ejs") %>
     <!-- body content -->
-    <form action="/login" method="POST">
-        Username:<input name="username" type="text"><br />
-        Password:<input name="password" type="password"><br />
-        <input type="submit" value="Login">
-    </form>
-    <!-- Error message -->
-    <% if(message){ %> 
+    <div class="col-sm-6">
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input id="username" name="username" type="text" placeholder="Digite seu username..." class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input id="password" name="password" type="password" placeholder="Digite sua senha..." class="form-control">
+            </div>
+            <input type="submit" value="Login" class="btn btn-primary">
+        </form>
+        <!-- Error message -->
+        <% if(message){ %> 
+            <p>
+                <label style="color:red"><%= message %></label>
+            </p>
+        <% } %> 
         <p>
-            <label style="color:red"><%= message %></label>
+            <a href="/users/forgot">Esqueceu a sua senha?</a> | <a href="/users/signup">Não possui cadastro?</a>
         </p>
-    <% } %> 
-    <p>
-        <a href="/users/forgot">Esqueceu a sua senha?</a> | <a href="/users/signup">Não possui cadastro?</a>
-    </p>
+    </div>
     <!-- botton -->
 <%- include("./partials/bottom.ejs") %>
