--- a/05_AuthPassport/views/signup.ejs
+++ b/05_AuthPassport/views/signup.ejs
@@ -1,21 +1,36 @@
 <!-- Top -->
 <%- include("./partials/top.ejs") %>
     <!-- body content -->
-    <form action="/users/signup" method="POST">
-        Username:<input name="username" type="text"><br />
-        Password:<input name="password" type="password"><br />
-        E-mail:<input name="email" type="text"><br />
-        Profile:<select name="profile">
+    <div class="col-sm-6">
+        <form action="/users/signup" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input id="username" name="username" type="text" placeholder="Digite seu username..." class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input id="password" name="password" type="password" placeholder="Digite sua senha..." class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail:</label>
+                <input id="email" name="email" type="text" placeholder="Digite seu email..." class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="profile">Profile:</label>
+                <select id="profile" name="profile" class="form-control">
                     <option value="0">User</option>
                     <option value="1">Admin</option>
                 </select>
-        <input type="submit" value="Save">
-    </form>
-    <!-- Error message -->
-    <% if(message){ %> 
-        <p>
-            <label style="color:red"><%= message %></label>
-        </p>
-    <% } %> 
+            </div>
+            <input type="submit" value="Save" class="btn btn-primary">
+            <a href="/" class="btn">Cancelar</a>
+        </form>
+        <!-- Error message -->
+        <% if(message){ %> 
+            <p>
+                <label style="color:red"><%= message %></label>
+            </p>
+        <% } %> 
+    </div>
     <!-- botton -->
 <%- include("./partials/bottom.ejs") %>
