--- a/05_AuthPassport/views/signup.ejs
+++ b/05_AuthPassport/views/signup.ejs
@@ -27,9 +27,9 @@
         </form>
         <!-- Error message -->
         <% if(message){ %> 
-            <p>
-                <label style="color:red"><%= message %></label>
-            </p>
+            <div class="alert alert-danger">
+                <%= message %>
+            </div>
         <% } %> 
     </div>
     <!-- botton -->
